# autocad-mcp

./: LICENSE  NOTICE  README.md  batch_tag.py  pyproject.toml  setup.bat
config/: autoload_lisp.ps1  config.json
lisp-code/: mcp_dispatch.lsp
src/autocad_mcp/: __init__.py  client.py  config.py  server.py
src/autocad_mcp/backends/: base.py  com_backend.py  ezdxf_backend.py  file_ipc.py
src/autocad_mcp/nlp/: __init__.py  processor.py
tests/: test_batch_find_and_tag.py  test_equipment_find.py  test_find_text.py  test_phase4_5.py  test_place_equipment_tag.py
